# dataflow

./: .gitignore  Dockerfile  UBSs-CORONAViRUS_AL.csv  app.py  brasil_estados.geojson  covid_19_brasil.db  csv_to_sqlite.ipynb  csv_to_sqlite.py  input.yaml  pyproject.toml  requirements.txt  tags
dataflow/: dataflow.py
